# load-atoms

./: .buildinfo  .gitignore  .pre-commit-config.yaml  API.md  DATASETS.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  TODO.md  a.ipynb  blah.ipynb  codecov.yml  database-summary.html  datasets-index.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  test.ipynb  z.ipynb
.doctrees/: codeautolink-cache.json  database-summary.doctree  datasets-index.doctree  index.doctree
.doctrees/api/: configuration.doctree  dataset.doctree  utils.doctree  viz.doctree
.doctrees/category/: benchmarks.doctree  potential-fitting.doctree  synthetic-data.doctree
.doctrees/datasets/: AC-2D-22.doctree  ANI-1ccx.doctree  ANI-1x.doctree  C-GAP-17.doctree  C-GAP-20U.doctree  C-SYNTH-23M.doctree  GO-MACE-23.doctree  GST-GAP-22.doctree  P-GAP-20.doctree  QM7.doctree  QM9.doctree  Si-GAP-18.doctree  SiO2-GAP-22.doctree  SiOx-ACE-24.doctree  a-Si-24.doctree  rMD17.doctree
.doctrees/dev/: building-the-docs.doctree  dataset-loading.doctree  dataset-processing.doctree  developer-guide.doctree
.github/workflows/: ci.yaml  docs.yaml  documentation.yaml  publish.yaml  pytests.yaml  tests.yaml
_modules/: index.html  load_atoms.html
_modules/load_atoms/: atoms_dataset.html  utils.html  visualisation.html
_modules/load_atoms/database/: backend.html  database_entry.html  processing.html
_sources/: database-summary.rst.txt  datasets-index.rst.txt
_sources/api/: configuration.rst.txt  dataset.rst.txt  utils.rst.txt
_sources/category/: benchmarks.rst.txt  potential-fitting.rst.txt  synthetic-data.rst.txt
_sources/datasets/: AC-2D-22.rst.txt  C-GAP-17.rst.txt  GO-MACE-23.rst.txt  GST-GAP-22.rst.txt  P-GAP-20.rst.txt  QM7.rst.txt  QM9.rst.txt  SiO2-GAP-22.rst.txt  SiOx-ACE-24.rst.txt  rMD17.rst.txt
_sources/dev/: dataset-loading.rst.txt  dataset-processing.rst.txt  developer-guide.rst.txt
_static/: documentation_options.js  qm9-22031.html
_static/visualisations/: AC-2D-22.html  ANI-1x.html  C-GAP-20U.html  GO-MACE-23.html  GST-GAP-22.html  P-GAP-20.html  QM9.html  Si-GAP-18.html  SiO2-GAP-22.html  SiOx-ACE-24.html  rMD17.html
api/: configuration.html  dataset.html  utils.html  viz.html
category/: benchmarks.html  potential-fitting.html  synthetic-data.html
database/AC-2D-22/: AC-2D-22.yaml  amorphous-graphene.xyz
database/ANI-1ccx/: ANI-1ccx.yaml
database/ANI-1x/: ANI-1x.yaml
database/C-GAP-17/: C-GAP-17.yaml
database/C-GAP-20/: C-GAP-20.yaml
database/C-GAP-20U/: C-GAP-20U.yaml
database/C-SYNTH-1M/: C-SYNTH-1M.yaml
database/C-SYNTH-23M/: C-SYNTH-23M.yaml
database/COLL/: COLL.yaml  script.py
database/Cu-ACE-21/: Cu-ACE-21.yaml  Cu_df2_1k.extxyz
database/Cu-POET/: Cu-POET.extxyz  Cu-POET.yaml  script.py
database/Cu-POET-19/: Cu-POET-19.yaml
database/GO-MACE-23/: GO-MACE-23.yaml
database/GST-GAP-22/: GST-GAP-22.yaml
database/MD17-1k/: MD17-1k.yaml  process.py
database/P-GAP-20/: P-GAP-20.yaml
database/QM7/: QM7.yaml
database/QM9/: QM9.yaml
database/SN2-19/: SN2-19.yaml  process.py
database/Si-GAP-18/: Si-GAP-18.yaml
database/SiO2-GAP-21/: SiO2-GAP-21.yaml
database/SiO2-GAP-22/: SiO2-GAP-22.yaml
database/SiOx-ACE-24/: SiOx-ACE-24.yaml
database/a-Si-24/: a-Si-24.yaml
database/rMD17/: rMD17.yaml
datasets/: AC-2D-22.html  ANI-1ccx.html  ANI-1x.html  C-GAP-17-dimers.extxyz  C-GAP-17-dimers.yaml  C-GAP-17.html  C-GAP-17.yaml  C-GAP-20U.html  C-SYNTH-23M.html  C-dimers.yaml  GO-MACE-23.html  GST-GAP-22.html  P-GAP-20.html  QM7.html  QM7.yaml  QM9.html  Si-GAP-18.html  SiO2-GAP-22.html  SiOx-ACE-24.html  a-Si-24.html  rMD17.html
dev/: DATASETS.md  DEVELOPMENT.md  HOW-IT-WORKS.md  TODO.md  building-the-docs.html  dataset-loading.html  dataset-processing.html  design.md  developer-guide.html  file_hashes.py  generate_page.py  rebuild_all_docs.py  x3d.py
dev/developer-guide/: README.md  adding-a-dataset.md  building-docs-locally.md
dev/docs/source/: api.rst  conf.py  datasets.rst  index.rst
dev/scripts/: file_hashes.py  generate_page.py  pages.py  rebuild_all_docs.py  x3d.py
docs/source/: api.rst  conf.py  database-summary.rst  datasets-index.rst  datasets.rst  examples.rst  hide-title.html  index.rst
docs/source/_static/: c-gap-17-1926.html  custom.css  ethanol.html  qm7-6492.html  qm9-22031.html  x3d.html
docs/source/api/: atoms-dataset.rst  configuration.rst  database.rst  dataset.rst  manipulations.rst  utils.rst  viz.rst
docs/source/category/: benchmarks.rst  potential-fitting.rst  synthetic-data.rst
docs/source/datasets/: AC-2D-22.rst  ANI-1ccx.rst  ANI-1x.rst  C-GAP-17-dimers.rst  C-GAP-17-train.rst  C-GAP-17.rst  C-GAP-20.rst  C-dimers.rst  (+22 more)
examples/: demo.ipynb
src/load_atoms/: __init__.py  api.py  atoms_dataset.py  backend.py  checksums.py  classes.py  database.py  dataset.py  dataset_info.py  download.py  manipulations.py  progress.py  util.py  utils.py  validation.py  visualise.js  visualise.py
tests/: test_all_datasets.py  test_atoms_dataset.py  test_backend.py  test_calculators.py  test_checksums.py  test_database.py  test_dataset.py  test_dataset_info.py  test_download.py  test_internet.py  test_manipulations.py  test_util.py  test_validation.py  test_verbose.py  test_view.py
tests/backend/: test_backend.py  test_internet.py
tests/database/: test_all_datasets.py  test_backend.py  test_database.py  test_database_entry.py  test_internet.py  test_processing.py
tests/dataset/: test_dataset.py  test_manipulations.py
tests/logic/: test_dataset.py  test_manipulations.py
tests/setup/: __init__.py
tests/shared/: test_checksums.py  test_dataset_info.py  test_util.py
(+95 files in other folders)
