[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "load-atoms"
version = "0.0.2"
description = "Large Open Access Datasets for Atomistic Materials Science (LOAD-AtoMS)"
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chemistry", "machine learning", "datasets"]
dependencies = ["ase", "pyyaml", "requests", "numpy", "pydantic"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "notebook",
    "pytest",
    "black",
    "isort",
    "sphinx",
    "furo",
    "nbsphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "pytest-cov",
    "build",
    "bumpver",
    "twine",
]

[project.urls]
Homepage = "https://github.com/jla-gardner/load-atoms"

[tool.bumpver]
current_version = "0.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/load_atoms/__init__.py" = ["{version}"]
